--- a/references.bib
+++ b/references.bib
@@ -112,3 +112,52 @@ and is in the range of 0.2 to 8 seconds for 16 to 128 trustees.},
 	journal = {GDPR.eu},
 	file = {Snapshot:/home/lorenz/Zotero/storage/QBVRPZZ5/gdpr.eu.html:text/html},
 }
+
+@article{hollis_share_2016,
+	title = {To {Share} or {Not} to {Share}: {Ethical} {Acquisition} and {Use} of {Medical} {Data}},
+	volume = {2016},
+	issn = {2153-4063},
+	shorttitle = {To {Share} or {Not} to {Share}},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5001759/},
+	abstract = {The Health Information Technology for Economic and Clinical Health (HITECH) Act proposes the meaningful use of interoperable electronic health records throughout the United States health care delivery system as a critical national goal. As we have moved from medical records on paper to interoperable electronic health records, the rapid and easy sharing of medical data through the Internet makes medical data insecure. Electronic data is easy to share but many steps to ensure security of the data need to be taken. Beyond medical data security, we need to ethically acquire, use and manage data so that all people involved with the data from producer to data manager are recognized and respected. This paper advocates that sharing medical data can be ethically the right choice for everyone in health care if data sharing guidelines are available for people to use, modify and strengthen for specific purposes.},
+	urldate = {2024-01-17},
+	journal = {AMIA Summits on Translational Science Proceedings},
+	author = {Hollis, Kate Fultz},
+	month = jul,
+	year = {2016},
+	pmid = {27570683},
+	pmcid = {PMC5001759},
+	pages = {420--427},
+	file = {PubMed Central Full Text PDF:/home/lorenz/Zotero/storage/PR45WY6E/Hollis - 2016 - To Share or Not to Share Ethical Acquisition and .pdf:application/pdf},
+}
+
+@misc{nasir_council_nodate,
+	title = {Council {Post}: {The} {Internet} {Of} {You}: {How} {Web} {Personalization} {Is} {Shaping} {The} {Future}},
+	shorttitle = {Council {Post}},
+	url = {https://www.forbes.com/sites/forbestechcouncil/2023/04/11/the-internet-of-you-how-web-personalization-is-shaping-the-future/},
+	abstract = {The future of the internet is here, and things are getting personal. With time, the underlying technologies will continue to mature, and web personalization will increase in its usefulness, ease of adoption and prevalence.},
+	language = {en},
+	urldate = {2024-02-21},
+	journal = {Forbes},
+	author = {Nasir, Rashad},
+	note = {Section: Innovation},
+	file = {Snapshot:/home/lorenz/Zotero/storage/953F5TPR/the-internet-of-you-how-web-personalization-is-shaping-the-future.html:text/html},
+}
+
+@misc{noauthor_googles_nodate,
+	title = {Google’s {Security} {Culture} - {Google} {Workspace}},
+	url = {https://workspace.google.com/learn-more/security/security-whitepaper/page-2.html},
+	abstract = {The security culture at Google extends past their dedicated security team to training for all employees, a privacy team, and internal audit specialists.},
+	language = {en},
+	urldate = {2024-02-21},
+	file = {Snapshot:/home/lorenz/Zotero/storage/IVTJ23IG/page-2.html:text/html},
+}
+
+@misc{noauthor_w3f_nodate,
+	title = {{W3F} {\textbar} {Web3} {Foundation}},
+	url = {https://web3.foundation/},
+	abstract = {Web3 Foundation Nurtures and stewards technologies and applications in the fields of decentralized web software protocols.},
+	language = {en},
+	urldate = {2024-02-21},
+	file = {Snapshot:/home/lorenz/Zotero/storage/UWJD56GS/web3.foundation.html:text/html},
+}
