--- a/references.bib
+++ b/references.bib
@@ -161,3 +161,26 @@ and is in the range of 0.2 to 8 seconds for 16 to 128 trustees.},
 	urldate = {2024-02-21},
 	file = {Snapshot:/home/lorenz/Zotero/storage/UWJD56GS/web3.foundation.html:text/html},
 }
+
+@misc{editor_access_nodate,
+	title = {access control - {Glossary} {\textbar} {CSRC}},
+	url = {https://csrc.nist.gov/glossary/term/access_control},
+	abstract = {CSRC Home Page},
+	language = {EN-US},
+	urldate = {2024-02-21},
+	author = {Editor, CSRC Content},
+	file = {Snapshot:/home/lorenz/Zotero/storage/SLDTPCB6/access_control.html:text/html},
+}
+
+@misc{community_web_2019,
+	title = {Web 2.0: {An} {Introduction}},
+	shorttitle = {Web 2.0},
+	url = {https://medium.com/@SoftwareDevelopmentCommunity/web-2-0-an-introduction-8230eb8fa6ce},
+	abstract = {An Introduction To Web 2.0},
+	language = {en},
+	urldate = {2024-02-21},
+	journal = {Medium},
+	author = {Community, Software Development},
+	month = feb,
+	year = {2019},
+}
